logs/devour.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/devour'...
Listing './lib/python3.5/site-packages/devour/bin'...
Compiling './lib/python3.5/site-packages/devour/consumers.py'...
***   File "./lib/python3.5/site-packages/devour/consumers.py", line 76
    print "{0}: {1}".format(e.__class__.__name__, str(e))
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/devour/django'...
Listing './lib/python3.5/site-packages/devour/django/management'...
Listing './lib/python3.5/site-packages/devour/django/management/commands'...
Listing './lib/python3.5/site-packages/devour/django/utils'...
Listing './lib/python3.5/site-packages/devour/utils'...
Compiling './lib/python3.5/site-packages/devour/utils/loaders.py'...
***   File "./lib/python3.5/site-packages/devour/utils/loaders.py", line 12
    except KeyError, ImportError:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/devour-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pykafka'...
Listing './lib/python3.5/site-packages/pykafka/cli'...
Listing './lib/python3.5/site-packages/pykafka/rdkafka'...
Listing './lib/python3.5/site-packages/pykafka/test'...
Listing './lib/python3.5/site-packages/pykafka/utils'...
Listing './lib/python3.5/site-packages/pykafka-2.7.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/pykafka'...
Listing './lib/python3.5/site-packages/tests/pykafka/rdkafka'...
Listing './lib/python3.5/site-packages/tests/pykafka/utils'...
Listing './share'...
Listing './share/python-wheels'...
